# hierarchical-product-classifier

./: .gitignore  MODEL_CARD.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app.py  requirements.txt  streamlit_app.py
configs/: flat.yaml  multihead.yaml
experiments/: runs.csv
notebooks/: 01_eda.ipynb  02_error_analysis.ipynb
src/hierclf/: __init__.py  data.py  evaluate.py  inference.py  model.py  taxonomy.py  tracking.py  train.py
tests/: test_data.py  test_taxonomy.py  test_tracking_e_split.py
